--- a/index.html
+++ b/index.html
@@ -38,27 +38,29 @@
 
    <section class="course" id="course">
        <h1>Courses We Offer</h1>
-       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur nihil pariatur et laudantium corporis quas tempore magnam, autem odio.
-           Alias mollitia quibusdam incidunt. Exercitationem harum ipsa dignissimos quasi, animi nulla?</p>
+       <p>The University has made a significant mark in the areas of higher education, community education and continual professional development. 
+        The University has been networking with reputed public institutions and private enterprises for enhancing the educational opportunities being offered by it. 
+        As a world leader in distance education, it has been conferred with awards of excellence by the Commonwealth of Learning (COL), Canada.</p>
        
        <div class="row">
            <div class="course-col">
-               <h3>Intermediate</h3>
+               <h3>DIPLOMA IN ENGG.</h3>
                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus, ratione nihil, voluptatum blanditiis cupiditate soluta iste ducimus animi praesentium reprehenderit corrupti similique earum laboriosam ipsum esse fugit tempora! Illum, quisquam.
+                MECH/CS/IT/ETC/EE/META/M.O.M.
                </p>
            </div>
     
            <div class="course-col">
                <h3>Degree</h3>
                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate earum, consectetur natus labore pariatur sit dicta omnis, mollitia error dolor odit voluptates nemo quo nihil et. Voluptas libero minus in.
+                BE/B.TECH-CS/IT/MECH/EE/EEE/ETC. <br> BA/BBA/BCOM/BCA/B.Sc
                </p>
            </div>
            <div class="course-col">
                <h3>Post Graduate</h3>
                <p>
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit at consectetur eum nostrum. Corrupti consectetur quos doloribus in nesciunt veniam. Odio voluptate quod modi odit libero labore itaque. Aut, asperiores?
+                ME/M.TECH-CS/IT/MECH/EE/EEE <br>
+                MBA/M.Sc/MCA
                </p>
            </div>
 
@@ -104,21 +106,23 @@
                <img src="image/library.png">
                <h3>World Class Library</h3>
                <p>
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorem ea, voluptatum placeat hic maiores cupiditate assumenda ab fuga nesciunt illum exercitationem iste molestias eveniet necessitatibus vero, tenetur sed expedita.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue mi, pellentesque non 
                </p>
            </div>
            <div class="facilities-col">
             <img src="image/basketball.png">
             <h3>Largest Play Ground</h3>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, amet! Labore quam, quo atque libero, quae eaque cumque suscipit delectus tempore eligendi voluptatum. Voluptatibus tempore quo beatae, quia quas aliquam!
+                Our College have a big playground. It has a huge boundary wall.  
+                We play volley-ball, hockey, football, cricket and basket ball.
             </p>
         </div>
         <div class="facilities-col">
             <img src="image/cafeteria.png">
             <h3>Tasty and Healthy Food</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestiae a quod qui, ab, blanditiis nihil, id quidem nemo distinctio quae praesentium doloremque ullam fuga cumque ex totam modi voluptatem.
+                The food and snacks supplied by outside restaurants are usually sub standard and injurious to health. 
+                So, students can get hygienic food in the college canteen.
             </p>
         </div>
        </div>
